# PalworldAccessibility

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  LICENSE  README.md  SETUP.md
Mods/PalAccessibility/Scripts/: main.lua
scripts/: fetch-ue4ss.bat  install-runtime.bat
src/: CMakeLists.txt  Hooks.cpp  Hooks.hpp  Hotkeys.cpp  Hotkeys.hpp  Nav.cpp  Nav.hpp  PatchNotes.cpp  PatchNotes.hpp  Speech.cpp  Speech.hpp  TolkBridge.cpp  TolkBridge.hpp  dllmain.cpp
